<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Joetz West-Vlaanderen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opties</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">E-mail:</string>
    <string name="password">Paswoord:</string>
    <string name="login">Log in</string>
    <string name="register">Registreer</string>
    <string name="APP_FB_ID">1401619376727163</string>
    <string name="registreer_text">Heeft u nog geen profiel bij ons? Klik dan hieronder op registreer en vul uw gegevens in.</string>
    <string name="registreer_fb">Log in met uw Facebook account, en vul uw profiel verder aan.</string>
    <string name="login_simple">Bent u reeds geregistreerd? Dan kan u hier inloggen met uw e-mail adres en paswoord.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="naam">Naam :</string>
    <string name="voornaam">Voornaam :</string>
    <string name="straat">Straat :</string>
    <string name="nr">Nr :</string>
    <string name="gemeente">Gemeente :</string>
    <string name="postcode">Postcode :</string>
    <string name="telefoon">Tel :</string>
    <string name="gsm">GSM :</string>
    <string name="renterpassword">Herhaal paswoord :</string>
    <string name="annuleer">Annuleer</string>
    <string name="ok">Ok</string>
    <string name="firebase">https://mobileone.firebaseio.com/</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sagittis dolor ac malesuada venenatis. Etiam ac mauris leo. Proin posuere nibh.</string>
    <string name="contact">Contact :</string>
    <string name="straat_joetz">President Kennedypark 2</string>
    <string name="plaats_joetz">8500 Kortrijk</string>
    <string name="tel_joetz">Tel. 056 27 47 00</string>
    <string name="email_joetz">E-mail : joetz.west@joetz.be</string>
    <string name="contact_persoon">Vera Bulteel</string>
    <string name="email_vera">E-mail vera.bulteel@joetz.be</string>
    <string name="tel_vera">Tel. 056 23 03 18</string>
    <string name="adm_onders">Administratieve ondersteuning</string>
    <string name="voegtoe">Voeg toe aan contacten</string>
    <string name="title_activity_vakantie_tabbar">VakantieTabbarActivity</string>
    <string name="Titel">Titel:</string>
    <string name="Promotekst">Promotekst:</string>
    <string name="adres">Adres:</string>
    <string name="website">Website:</string>
    <string name="mapButton">Klik hier voor google maps</string>
    <string name="title_activity_vakantie_detail">VakantieDetailActivity</string>
    <string name="slideshow">Start slide show</string>
    <string name="title_activity_vakantie_algemeen">VakantieAlgemeenActivity</string>
    <string name="title_activity_vakantie_locatie">VakantieLocatieActivity</string>
    <string name="vakanties">Vakanties</string>
    <string name="addKind">Voeg kind toe</string>
    <string name="opslaan">Opslaan</string>

    <string name="Vragen">Is it me you\'re looking for?</string>
    <string name="Facebookfragment">1 like = extra punt vo projecten 3, 1 share = 2 extra punten</string>
    <string name="Moyson">Dit is de pagina voor Bond Moyson</string>
    <string name="rijksregisternr">Rijksregisternummer:</string>
    <string name="info">info:</string>
    <string name="welkomjoetz">Welkom bij Joetz</string>

</resources>
