<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.steven.joetzandroid.Activities.About"
    android:background="@drawable/ab_solid_joetztitlebar">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginLeft="12dp"
           android:layout_marginRight="12dp">
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:src="@drawable/headerjoetz2"
               android:layout_marginBottom="15dp"
               android:background="@drawable/ab_stacked_solid_joetztitlebar"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:text="@string/welkomjoetz"
               android:layout_gravity="center_horizontal"
               android:textColor="@android:color/white"
               android:layout_marginBottom="12dp"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:text="@string/lorem"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/contact"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:layout_marginTop="10dp"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:layout_marginTop="5dp"
               android:text="@string/straat_joetz"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/plaats_joetz"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/tel_joetz"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/email_joetz"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:layout_marginTop="5dp"
               android:text="@string/contact_persoon"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/email_vera"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/tel_vera"
               android:textColor="@android:color/white"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/adm_onders"
               android:textColor="@android:color/white"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="7dp"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="8dp"
               android:text="@string/voegtoe"
               android:background="@drawable/joetz_button"
               android:textColor="@android:color/white"/>

           </LinearLayout>

       </ScrollView>
</FrameLayout>
