<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.steven.joetzandroid.Activities.RegisterFragment"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/naam"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:layout_height="match_parent"
            android:layout_width="fill_parent"

            android:id="@+id/naamEditText"

            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/voornaam"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <EditText
                android:layout_height="match_parent"
                android:layout_width="fill_parent"

                android:id="@+id/voornNaamEditText" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/straat"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="0.3"
                android:id="@+id/straatEditText"
                />
            <TextView
                android:text="@string/nr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:id="@+id/nummerEditText"
                android:numeric="integer" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/gemeente"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <EditText
                android:layout_height="match_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.6"
                android:id="@+id/gemeenteEditText"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/postcode"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:id="@+id/postcodeEditText"
                android:numeric="integer" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/telefoon"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <EditText
                android:layout_height="match_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.2"
                android:id="@+id/telefoonEditText"
                android:phoneNumber="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/gsm"
                android:textAppearance="?android:attr/textAppearanceMedium"

                />
            <EditText
                android:layout_height="match_parent"
                android:layout_width="fill_parent"
                android:layout_weight="1.3"
                android:id="@+id/gsmEditText"
                android:phoneNumber="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/emailEditTextRegis"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"

                />
            <EditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1.9"
                android:id="@+id/passwordEditText"
                android:password="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/renterpassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="0.6"
                />
            <EditText
                android:layout_height="match_parent"
                android:layout_width="fill_parent"
                android:layout_weight="1.9"
                android:id="@+id/passwordReEditText"
                android:password="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cancelButton"
                android:background="@drawable/joetz_button"
                android:text="@string/annuleer"
                android:textColor="@android:color/white"/>
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/joetz_button"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:id="@+id/registerButtonReg"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
